# gLLM

./: .dockerignore  DEV_GUIDE.md  HARDWARE_GUIDE.md  README.md  docker-compose.prod.yaml  nginx.conf  package-lock.json
.github/workflows/: ci.yaml
docs/: AI_AGENT_ARCHITECTURE.md
finetune/: .gitignore  README.md  config.yaml  finetune.py  run_finetune.sh
frontend/: package-lock.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/models/: User.ts
frontend/src/pages/: AdminPanel.tsx  Login.tsx  MainMenu.tsx  RequestFineTune.tsx  RetiredAccess.tsx  Signup.tsx
frontend/src/services/: api.ts
src/: .env.example  Dockerfile  chainlit-app.py  pyproject.toml  server.py
src/.chainlit/: config.toml
src/core/: config.py  logging.py
src/models/: user.py
src/ragutils/: ingestion.py  retrieval.py  vector_db.py
src/routers/: adminrouter.py  authrouter.py  finetuningrouter.py
src/schema/alembic/: env.py
src/services/: adminservice.py  authservice.py  promptservice.py
src/services/ragutils/: ingestion.py  retrieval.py  vector_db.py
tests/: test_endpoints.py  test_finetune.py
vllmconfig/: vllminit.sh  vllminit_lora.sh
